Fix word wrapping in static about page footer

--- a/app/javascript/styles/mastodon/footer.scss
+++ b/app/javascript/styles/mastodon/footer.scss
@@ -118,6 +118,10 @@
       }
     }
 
+    .word-wrap {
+      word-wrap: break-word;
+    }
+
     .brand {
       svg {
         display: block;
